JavaDocs added.