@@ -9,12 +9,14 @@ import java.util.List;
 /**
  * Represents a building. 
  * Stores the {@link Map maps} representing the floors, which of these is the ground floor and the {@link POI} representing the building.
+ * A building is unique, so creating a building with the same id leads to an error. Therefore buildings should best be initialized at or from one central
+ * source, and afterwards only used with getBuildingByID.
  * @author fred
  *
  */
 public class Building implements Serializable {
 	
-	/** Stores the ID of the building.*/
+	/** Stores the unique ID of the building.*/
 	private final int id;
 	
 	/** Stores the {@link Map maps} representing the floors from lowest to highest.*/
@@ -53,13 +55,14 @@ public class Building implements Serializable {
 		if (allBuildings.containsKey(new Integer(id))) {
 			throw new IllegalArgumentException("Building ID duplicate.");
 		} else {
-			allBuildings.put(new Integer(id), this);
+			allBuildings.put(Integer.valueOf(id), this);
 		}
 		
 	}
 	
 	/**
-	 * Returns the ID of the building.
+	 * Returns the ID of the building. This id is unique, and can therefore be used in combination with
+	 * {@link getBuildingByID()} to get a specific building.
 	 * @return The ID of the building.
 	 */
 	public int getID() {
@@ -67,7 +70,8 @@ public class Building implements Serializable {
 	}
 	
 	/**
-	 * Returns the {@link Map maps} representing the floors of the building.
+	 * Returns the {@link Map maps} representing the floors of the building. This list is ordered from the top floor down.
+	 * To identify the ground floor, use {@link getGroundFloorIndex()}, or use getGroundFloor() to get its map directly.
 	 * @return The {@link Map maps} representing the floors of the building.
 	 */
 	public List<Map> getFloors() {
@@ -75,7 +79,8 @@ public class Building implements Serializable {
 	}
 	
 	/**
-	 * Returns the index of the ground floor in the list gotten by <code>getFloors</code>.
+	 * Returns the index of the ground floor in the list gotten by <code>getFloors</code>. Use this in combination with getFloors to identify
+	 * the map of the ground floor.
 	 * @return The index of the ground floor in the list gotten by <code>getFloors</code>.
 	 */
 	public int getGroundFloorIndex() {
@@ -83,7 +88,8 @@ public class Building implements Serializable {
 	}
 	
 	/**
-	 * Returns the {@link POI} representing the building.
+	 * Returns the {@link POI} representing the building. This POI normally is jumped to (in the view)
+	 * show after this building is left. To access the building, use the building-variable in a POI.
 	 * @return The {@link POI} representing the building.
 	 */
 	public POI getBuildingPOI() {
@@ -93,6 +99,8 @@ public class Building implements Serializable {
 	/**
 	 * Returns the building specified by <code>id</code>.
 	 * If there are two buildings with <code>id</code>, only one of them is returned. No guarantee of this is given in future versions.
+	 * As the id should be unique, this gives the possibility to exactly identify buildings and - provided a consistent source for buildings
+	 * exists, store buildings over program starts and shutdowns.
 	 * @param id The ID the building given back has.
 	 * @return The building specified by <code>id</code> or <code>null</code>, if no such building exists.
 	 */
@@ -103,7 +111,8 @@ public class Building implements Serializable {
 	}
 	
 	/**
-	 * Returns the building's ground floor as a {@link Map} object.
+	 * Returns the building's ground floor as a {@link Map} object. This should be equivalent to
+	 * getFloors().get(getGroundFloorIndex).
 	 * @return the building's ground floor
 	 */
 	public Map getGroundFloor() {
